--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,6 +32,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          ./docker_hub_cleanner.sh test test 10
+          ./docker_hub_cleanner.sh $USERNAME $PASS $REPO
+        env:
+          USERNAME: ${{secret.USERNAME}}
+          PASS: ${{secret.PASS}}
+          REPO: ${{secret.REPOSITORY_TO_CLEAN}}
