--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,6 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          echo "The username wil be: $USERNAME and the repo: $REPO"
           ./docker_hub_cleanner.sh $USERNAME $PASS $REPO
         env:
           USERNAME: ${{secrets.USERNAME}}
