--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,12 +27,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: Lets clean up old tags in docker hub
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo "The username wil be: $USERNAME and the repo: $REPO"
           ./docker_hub_cleanner.sh $USERNAME $PASS $REPO
         env:
           USERNAME: ${{secrets.USERNAME}}
