--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: Lets clean up old tags in docker hub
+        run:  echo Lets clean up old tags in docker hub
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
