--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,8 +32,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          ./docker_hub_cleanner.sh $USERNAME $PASS $REPO
+          ./docker_hub_cleanner.sh $USERNAME $PASS $DAYS_FROM
         env:
           USERNAME: ${{secrets.USERNAME}}
           PASS: ${{secrets.PASS}}
-          REPO: ${{secrets.REPOSITORY_TO_CLEAN}}
+          DAYS_FROM: ${{secrets.DAYS_FROM}}
