--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          ./docker_hub_cleanner.sh $USERNAME $PASS $DAYS_FROM $TOKEN
+          ./docker_hub_cleanner.sh $USERNAME NOPASS $DAYS_FROM $TOKEN
         env:
           USERNAME: ${{secrets.USERNAME}}
           PASS: ${{secrets.PASS}}
