--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,9 +32,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          ./docker_hub_cleanner.sh $USERNAME NOPASS $DAYS_FROM $TOKEN
+          ./docker_hub_cleanner.sh $USERNAME NOPASS $DAYS_FROM $TOKEN $MODE
         env:
           USERNAME: ${{secrets.USERNAME}}
           PASS: ${{secrets.PASS}}
           DAYS_FROM: ${{secrets.DAYS_FROM}}
           TOKEN: ${{secrets.TOKEN}}
+          MODE: TEST
